--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 locale                   : "en-US"
 title                    : "Jay's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Jay Imperatori"
+description              : &description "Georgia Tech Stamps President's Scholar"
+url                      : https://jayimperatori.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "headshot.jpeg"
+  name             : "Jay Imperatori"
+  pronouns         : "he/him"
+  bio              : "Georgia Tech Stamps Presdient's Scholar"
+  location         : "Atlanta, Georgia"
+  employer         : 
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "jimperatori6@gatech.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
