--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "headshot.jpeg"
+  avatar           : "headshot.jpg"
   name             : "Jay Imperatori"
   pronouns         : "he/him"
   bio              : "Georgia Tech Stamps Presdient's Scholar"
