--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "jayimperatori"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -56,9 +56,9 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : www.instagram.com/jay_imperatori
+  instagram        : jay_imperatori
   lastfm           : # Username
-  linkedin         : www.linkedin.com/in/jay_imperatori
+  linkedin         : jay_imperatori
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
